"updated a pages and app/server"

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Big Poppa Code React Starter Kit</title>
+  <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.317b8c29d03ed44f333c.js?07f8bbcba21b45dcc013"></script><script defer src="js/dist/App.a8c22b3895e67ad66187.js?07f8bbcba21b45dcc013"></script><script defer src="js/dist/main.79696413517eae1629de.js?07f8bbcba21b45dcc013"></script></head>
+<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.9135f744a8490e8d326d.js?4eb474832935164aff74"></script><script defer src="js/dist/App.b59de5a7283dca94e2a7.js?4eb474832935164aff74"></script><script defer src="js/dist/main.79696413517eae1629de.js?4eb474832935164aff74"></script></head>
 
 <body>
   <div id="app"></div>
