--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-  
-
-<head>
-  <meta charset="utf-8">
-  <title>Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.9135f744a8490e8d326d.js?9407d334f75fe2c4b4ac"></script><script defer src="js/dist/App.d3f8557385ff522083d4.js?9407d334f75fe2c4b4ac"></script><script defer src="js/dist/main.79696413517eae1629de.js?9407d334f75fe2c4b4ac"></script></head>
-
-<body>
-  <div id="app"></div>
-
-</body>
-
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>Portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="js/dist/315.e03ff6d2588573a6539c.js?e585296bc5128b2317c2"></script><script defer="defer" src="js/dist/App.59881a3619c1f8f24330.js?e585296bc5128b2317c2"></script><script defer="defer" src="js/dist/main.86600fb455f43a062657.js?e585296bc5128b2317c2"></script></head><body><div id="app"></div></body></html>
