--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Portfolio</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="js/dist/315.e03ff6d2588573a6539c.js?e585296bc5128b2317c2"></script><script defer="defer" src="js/dist/App.59881a3619c1f8f24330.js?e585296bc5128b2317c2"></script><script defer="defer" src="js/dist/main.86600fb455f43a062657.js?e585296bc5128b2317c2"></script></head><body><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html>
+  
+
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.9135f744a8490e8d326d.js?3c74d53dd27ee2bee425"></script><script defer src="js/dist/App.4f2a93c7d530fc98b90f.js?3c74d53dd27ee2bee425"></script><script defer src="js/dist/main.79696413517eae1629de.js?3c74d53dd27ee2bee425"></script></head>
+
+<body>
+  <div id="app"></div>
+
+</body>
+
+</html>
